--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="app.js"></script>
+    <title>assingment</title>
+    <script src="chap123.js"></script>
+    <script src=""></script>
 </head>
 <body>
-    <script>
-        var food = "PIZZA"
-        alert (food+"\n"+"PIZZ"+"\n"+"PIZ"+"\n"+"PI"+"\n"+"P")
-       </script>
+   
 </body>
 </html>
